# DynamicDNS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/dns/: CMakeLists.txt  provider.cpp  provider.hpp  types.cpp  types.hpp
src/core/error/: CMakeLists.txt  error.cpp  error.hpp
src/core/http/: CMakeLists.txt  client.cpp  client.hpp
src/core/ip/: CMakeLists.txt  resolver.cpp  resolver.hpp  types.hpp
src/core/json/: CMakeLists.txt  parser.cpp  parser.hpp
tests/core/: CMakeLists.txt
tests/core/http/: CMakeLists.txt  client_test.cpp
tests/core/ip/: CMakeLists.txt  resolver_test.cpp
tests/core/json/: CMakeLists.txt  parser_test.cpp
